<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5dp"
    android:background="@android:color/holo_red_light"
    android:orientation="horizontal">

    <ImageView
        android:id="@+id/image_item"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_launcher_foreground" />

    <CheckBox
        android:id="@+id/checkbox_item"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:buttonTint="@color/black"
        android:text="check box#"
        android:textColor="@color/black"
        android:textSize="20sp" />

    <EditText
        android:textSize="20sp"
        android:textColor="@color/white"
        android:layout_gravity="center_vertical"
        android:id="@+id/edit_text_item"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

</LinearLayout>